tests/miniJava/neg/005250_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] new java ( ) { return 0 ; } }
